エレメンタルボウのリワークを1.20.1 Forge向けに補正